HelperとAttributesフォルダを追加しました

--- a/src/ChatApp/ChatApp.csproj
+++ b/src/ChatApp/ChatApp.csproj
@@ -65,9 +65,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Room\Models\" />
     <Folder Include="Features\UserAvatar\" />
     <Folder Include="Features\ChatRoomAvatar\" />
+    <Folder Include="Attributes\" />
   </ItemGroup>
 
 </Project>
