--- a/src/ChatApp/appsettings.json
+++ b/src/ChatApp/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-9QRN9QT\\SQLEXPRESS; User Id=ChatApp; Password=Password; Initial Catalog=CharApp"
+    "DefaultConnection": "Data Source=Localhost\\SQLEXPRESS; User Id=ChatApp; Password=Password; Initial Catalog=CharApp"
   },
   "Logging": {
     "IncludeScopes": false,
