--- a/src/ChatApp/bower.json
+++ b/src/ChatApp/bower.json
@@ -6,6 +6,12 @@
     "jquery": "2.2.0",
     "jquery-validation": "1.14.0",
     "jquery-validation-unobtrusive": "3.2.6",
-    "angular": "1.5.5"
+    "angular": "1.5.5",
+    "angular-route": "v1.6.4",
+    "angular-resource": "v1.6.4-build.5315+sha.c80fa1c"
+  },
+  "resolutions": {
+    "angular": "1.6.5-build.5390+sha.a86a319",
+    "angular-route": "v1.6.5-build.5390+sha.a86a319"
   }
 }
