--- a/src/ChatApp/bower.json
+++ b/src/ChatApp/bower.json
@@ -9,7 +9,7 @@
     "angular": "1.5.5",
     "angular-route": "v1.6.4",
     "angular-resource": "v1.6.4-build.5315+sha.c80fa1c",
-    "ngInfiniteScroll": "1.3.4"
+    "angular-marked": "v1.2.2"
   },
   "resolutions": {
     "angular": "1.6.4",
