--- a/src/ChatApp/bower.json
+++ b/src/ChatApp/bower.json
@@ -9,7 +9,8 @@
     "angular": "1.5.5",
     "angular-route": "v1.6.4",
     "angular-resource": "v1.6.4-build.5315+sha.c80fa1c",
-    "angular-marked": "v1.2.2"
+    "angular-marked": "v1.2.2",
+    "angular-bootstrap": "^2.5.0"
   },
   "resolutions": {
     "angular": "1.6.4",
