--- a/src/ChatApp/package.json
+++ b/src/ChatApp/package.json
@@ -1,9 +1,12 @@
 {
-	"version": "1.0.0",
-	"name": "asp.net",
-	"private": true,
+  "version": "1.0.0",
+  "name": "asp.net",
+  "private": true,
   "devDependencies": {
-    "grunt": "~1.0.1",
-    "grunt-contrib-uglify": "~3.0.1"
-  }
+    "grunt": "^1.0.1",
+    "grunt-contrib-less": "^1.4.1",
+    "grunt-contrib-uglify": "~3.0.1",
+    "grunt-contrib-watch": "^1.0.0"
+  },
+  "dependencies": {}
 }
