Remove マイグレーションファイルをGIT管理対象外に変更

--- a/src/ChatApp/.gitattributes
+++ b/src/ChatApp/.gitattributes
@@ -1,4 +1,3 @@
-./Migrations/ merge=ours
-./Migrations/*.cs merge=ours
+./Migrations/.gitignore merge=ours
 ./appsettings.json merge=ours
 ./Startup.cs merge=ours
