--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "name": "asp.net",
   "private": true,
   "devDependencies": {
+    "bower": "^1.8.0",
     "grunt": "^1.0.1",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-cssmin": "^2.2.0",
     "grunt-contrib-less": "^1.4.1",
-    "grunt-contrib-uglify": "~3.0.1",
+    "grunt-contrib-uglify": "^3.0.1",
     "grunt-contrib-watch": "^1.0.0"
   },
   "dependencies": {}
