--- a/src/ChatApp/appsettings.json
+++ b/src/ChatApp/appsettings.json
@@ -5,6 +5,7 @@
     "DefaultConnection": "Data Source=Localhost\\SQLEXPRESS; User Id=ChatApp; Password=Password; Initial Catalog=CharApp"
   },
   "Logging": {
+    "PathFormat": "Logs/log-{Date}.txt",
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Debug",
