Clean ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -27,10 +27,9 @@ bld/
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
-wwwroot/
-!wwwroot/*
-wwwroot/lib/
-
+src/ChatApp/wwwroot/lib
+src/ChatApp/wwwroot/**/*.min.js
+src/ChatApp/wwwroot/**/*.min.css
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
