Modify 機能 #5 appsettings.json

--- a/src/ChatApp/appsettings.json
+++ b/src/ChatApp/appsettings.json
@@ -4,6 +4,12 @@
     "PostgresConnection": "Host=localhost; User ID=ChatApp; Password=Password; Port=5432; Database=ChatApp; Pooling=true;",
     "DefaultConnection": "Data Source=Localhost\\SQLEXPRESS; User Id=ChatApp; Password=Password; Initial Catalog=CharApp"
   },
+  "Authentication": {
+    "Google": {
+      "ClientId": "client_id",
+      "ClientSecret": "client_secret"
+    }
+  },
   "Logging": {
     "PathFormat": "Logs/log-{Date}.txt",
     "IncludeScopes": false,
