Modify タスク #14 データベースをPostgreSQLのみにする

--- a/src/ChatApp/appsettings.json
+++ b/src/ChatApp/appsettings.json
@@ -1,8 +1,6 @@
 {
-  "DataProvider": "",
   "ConnectionStrings": {
-    "PostgresConnection": "Host=localhost; User ID=ChatApp; Password=Password; Port=5432; Database=ChatApp; Pooling=true;",
-    "DefaultConnection": "Data Source=Localhost\\SQLEXPRESS; User Id=ChatApp; Password=Password; Initial Catalog=CharApp"
+    "DefaultConnection": "Host=localhost; User ID=ChatApp; Password=Password; Port=5432; Database=ChatApp; Pooling=true;"
   },
   "Authentication": {
     "Google": {
