タスク #44 dotnetのバージョンを2.0.0にする

--- a/src/ChatApp/appsettings.json
+++ b/src/ChatApp/appsettings.json
@@ -1,11 +1,13 @@
 {
+  "PathBase": "/chat",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost; User ID=ChatApp; Password=Password; Port=5432; Database=ChatApp; Pooling=true;"
   },
   "Authentication": {
     "Google": {
       "ClientId": "client_id",
-      "ClientSecret": "client_secret"
+      "ClientSecret": "client_secret",
+      "AccessType": "offline"
     }
   },
   "Logging": {
