--- a/src/ChatApp/ChatApp.csproj
+++ b/src/ChatApp/ChatApp.csproj
@@ -9,11 +9,6 @@
     <RuntimeFrameworkVersion>2.0.0-preview2</RuntimeFrameworkVersion>
   </PropertyGroup>
   <ItemGroup>
-    <None Update="wwwroot\**\*">
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.0.0-preview2-final" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="2.0.0-preview2-final" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.0.0-preview2-final" />
@@ -39,15 +34,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.0.0-preview2-final" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.0.0-preview2-final" />
   </ItemGroup>
-  <Target Name="PreRestoreScript" BeforeTargets="Restore">
-    <Exec Command="npm install" />
-    <Exec Command="bower install" />
-    <Exec Command="grunt build" />
-  </Target>
-  <Target Name="PrepublishScript" BeforeTargets="PrepareForPublish">
-    <Exec Command="dotnet ef database update" />
-  </Target>
   <ItemGroup>
-    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0-preview1-final" />
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0-preview1-final" />
   </ItemGroup>
 </Project>
