--- a/src/ChatApp/ChatApp.csproj
+++ b/src/ChatApp/ChatApp.csproj
@@ -37,5 +37,6 @@
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0-preview1-final" />
+    <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="2.0.0-preview1-final" />
   </ItemGroup>
 </Project>
