--- a/src/ChatApp/bower.json
+++ b/src/ChatApp/bower.json
@@ -8,7 +8,8 @@
     "jquery-validation-unobtrusive": "3.2.6",
     "angular": "1.5.5",
     "angular-marked": "v1.2.2",
-    "angular-bootstrap": "^2.5.0"
+    "angular-bootstrap": "^2.5.0",
+    "jquery.cookie": "jquery-cookie#^1.4.1"
   },
   "resolutions": {
     "angular": "1.6.4",
