--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,8 @@ bld/
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 src/ChatApp/wwwroot/lib
+src/ChatApp/wwwroot/**/*.css
 src/ChatApp/wwwroot/**/*.min.js
-src/ChatApp/wwwroot/**/*.min.css
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
