--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ bld/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 src/ChatApp/wwwroot/lib
 src/ChatApp/wwwroot/**/*.css
-src/ChatApp/wwwroot/**/*.min.js
+src/ChatApp/wwwroot/**/*.js
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
