--- a/src/ChatApp/bower.json
+++ b/src/ChatApp/bower.json
@@ -3,13 +3,10 @@
   "private": true,
   "dependencies": {
     "bootstrap": "3.3.6",
-    "jquery": "2.2.0",
     "jquery-validation": "1.14.0",
     "jquery-validation-unobtrusive": "3.2.6",
-    "angular": "1.5.5",
-    "angular-marked": "v1.2.2",
     "angular-bootstrap": "^2.5.0",
-    "jquery.cookie": "jquery-cookie#^1.4.1"
+    "jquery": "2.2.0"
   },
   "resolutions": {
     "angular": "1.6.4",
