タスク #101 bowerからnpmへ移行する

--- a/src/ChatApp/package.json
+++ b/src/ChatApp/package.json
@@ -2,16 +2,30 @@
   "version": "1.0.0",
   "name": "asp.net",
   "private": true,
+  "scripts": {
+    "clean": "npm-run-all clean:*",
+    "clean:js": "cleandir wwwroot/js",
+    "clean:css": "cleandir wwwroot/css",
+    "clean:lib": "cleandir wwwroot/lib",
+    "build": "npm-run-all build:*",
+    "build:js": "cleandir wwwroot/js && grunt typings && webpack",
+    "build:css": "cleandir wwwroot/css && grunt build",
+    "copy": "npm-run-all clean:lib copy:*",
+    "copy:bootstrap": "cpx node_modules/bootstrap/dist/**/* ./wwwroot/lib/bootstrap/",
+    "copy:jquery": "cpx node_modules/jquery/dist/*.js ./wwwroot/lib/jquery/",
+    "copy:jquery-validation": "cpx node_modules/jquery-validation/dist/**/*.js ./wwwroot/lib/jquery-validation/",
+    "copy:jquery-validation-unobtrusive": "cpx node_modules/jquery-validation-unobtrusive/*.js ./wwwroot/lib/jquery-validation-unobtrusive/"
+  },
   "devDependencies": {
-    "bower": "^1.8.0",
+    "clean-dir": "^1.0.3",
+    "cpx": "^1.5.0",
+    "glob": "^7.1.2",
     "grunt": "^1.0.1",
-    "grunt-browserify": "^5.2.0",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-cssmin": "^2.2.0",
     "grunt-contrib-less": "^1.4.1",
-    "grunt-contrib-uglify": "^3.0.1",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-ts": "^6.0.0-beta.17",
+    "npm-run-all": "^4.1.2",
     "ts-loader": "^3.2.0",
     "typescript": "^2.7.0-dev.20171209",
     "typings": "^2.1.1",
@@ -26,6 +40,8 @@
     "angular-ui-bootstrap": "^2.5.6",
     "bootstrap": "^3.3.6",
     "jquery": "^2.2.0",
+    "jquery-validation": "^1.14.0",
+    "jquery-validation-unobtrusive": "^3.2.6",
     "jquery.cookie": "^1.4.1",
     "marked": "^0.3.7"
   }
