--- a/src/ChatApp/package.json
+++ b/src/ChatApp/package.json
@@ -12,10 +12,10 @@
     "build:js": "cleandir wwwroot/js && grunt typings && webpack",
     "build:css": "cleandir wwwroot/css && grunt build",
     "copy": "npm-run-all clean:lib copy:*",
-    "copy:bootstrap": "cpx node_modules/bootstrap/dist/**/* ./wwwroot/lib/bootstrap/dist",
-    "copy:jquery": "cpx node_modules/jquery/dist/*.js ./wwwroot/lib/jquery/dist/",
-    "copy:jquery-validation": "cpx node_modules/jquery-validation/dist/**/*.js ./wwwroot/lib/jquery-validation/dist",
-    "copy:jquery-validation-unobtrusive": "cpx node_modules/jquery-validation-unobtrusive/*.js ./wwwroot/lib/jquery-validation-unobtrusive/"
+    "copy:bootstrap": "cpx 'node_modules/bootstrap/dist/**/*' ./wwwroot/lib/bootstrap/dist",
+    "copy:jquery": "cpx 'node_modules/jquery/dist/*.js' ./wwwroot/lib/jquery/dist/",
+    "copy:jquery-validation": "cpx 'node_modules/jquery-validation/dist/**/*.js' ./wwwroot/lib/jquery-validation/dist",
+    "copy:jquery-validation-unobtrusive": "cpx 'node_modules/jquery-validation-unobtrusive/*.js' ./wwwroot/lib/jquery-validation-unobtrusive/"
   },
   "devDependencies": {
     "clean-dir": "^1.0.3",
