--- a/src/ChatApp/package.json
+++ b/src/ChatApp/package.json
@@ -39,9 +39,9 @@
   },
   "dependencies": {
     "@types/angular-ui-bootstrap": "^0.13.46",
-    "@types/angularjs": "^1.5.5-alpha",
+    "@types/angularjs": "1.5.5-alpha",
     "@types/jquery": "^2.0.48",
-    "angular": "^1.5.5",
+    "angular": "1.5.5",
     "angular-marked": "^1.2.2",
     "angular-ui-bootstrap": "^2.5.6",
     "bootstrap": "^3.3.6",
