--- a/src/ChatApp/ChatApp.csproj
+++ b/src/ChatApp/ChatApp.csproj
@@ -6,7 +6,7 @@
     <OutputType>Exe</OutputType>
     <PackageId>ChatApp</PackageId>
     <UserSecretsId>aspnet-ChatApp-50b6711b-64f2-497b-a665-9b5c6620a8c4</UserSecretsId>
-    <RuntimeFrameworkVersion>2.0.0-preview2</RuntimeFrameworkVersion>
+    <RuntimeFrameworkVersion>2.0.0</RuntimeFrameworkVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.0.0-preview2-final" />
