Startup.cs のサービス注入をappsetting.jsonに記載するように変更
  Testを別のクラスに取り換えて実施できるようにするため

--- a/src/ChatApp/appsettings.json
+++ b/src/ChatApp/appsettings.json
@@ -18,5 +18,17 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Injection": {
+    "Singleton": {
+      "ChatApp.Services.IDateTimeService": "ChatApp.Services.DateTimeService",
+      "ChatApp.Services.RoomwebSocket.IRoomWebSocketService": "ChatApp.Services.RoomwebSocket.RoomWebSocketService",
+      "ChatApp.Services.RoomwebSocket.IRoomWSSender": "ChatApp.Services.RoomwebSocket.RoomWSSender"
+    },
+    "Transient": {
+      "ChatApp.Services.IEmailSender": "ChatApp.Services.GMailSender",
+      "ChatApp.Services.ISmsSender": "ChatApp.Services.AuthMessageSender",
+      "ChatApp.Services.IControllerService": "ChatApp.Services.ControllerBaseService"
+    }
   }
 }
