--- a/test/ChatApp.Test/ChatApp.Test.csproj
+++ b/test/ChatApp.Test/ChatApp.Test.csproj
@@ -9,10 +9,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
-    <Content Include="appsettings.Test.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
   </ItemGroup>
 
   <Target Name="CopyDepsFiles" AfterTargets="Build" Condition="'$(TargetFramework)'!=''">
@@ -23,6 +19,7 @@
   </Target>
 
   <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="0.9.9.1" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170517-02" />
     <PackageReference Include="Moq" Version="4.8.1" />
