--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       context: .
       dockerfile: Dockerfile
     network_mode: host
+    env_file: .env
+    restart: always
 
   sdk:
     build:
@@ -17,6 +19,7 @@ services:
       context: .
       dockerfile: Dockerfile
     network_mode: host
+    env_file: .env
 
   test:
     build:
