--- a/src/ChatApp/package.json
+++ b/src/ChatApp/package.json
@@ -24,31 +24,32 @@
   "devDependencies": {
     "clean-dir": "^1.0.3",
     "cpx": "^1.5.0",
-    "glob": "^7.1.2",
-    "grunt": "^1.0.1",
-    "grunt-cli": "^1.2.0",
-    "grunt-contrib-cssmin": "^2.2.0",
-    "grunt-contrib-less": "^1.4.1",
-    "grunt-contrib-watch": "^1.0.0",
-    "npm-run-all": "^4.1.2",
-    "ts-loader": "^3.2.0",
-    "typescript": "^2.7.0-dev.20171209",
+    "glob": "^7.1.3",
+    "grunt": "^1.0.3",
+    "grunt-cli": "^1.3.1",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-less": "^2.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "npm-run-all": "^4.1.3",
+    "ts-loader": "^5.3.0",
+    "typescript": "^3.1.6",
     "typings": "^2.1.1",
-    "webpack": "^3.10.0",
-    "webpack-merge": "^4.1.1"
+    "webpack": "^4.24.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "@types/angular-ui-bootstrap": "^0.13.46",
+    "@types/angular-ui-bootstrap": "^0.13.47",
     "@types/angularjs": "1.5.5-alpha",
-    "@types/jquery": "^2.0.48",
+    "@types/jquery": ">=3.0.0",
     "angular": "1.5.5",
     "angular-marked": "^1.2.2",
     "angular-ui-bootstrap": "^2.5.6",
     "bootstrap": "^3.3.6",
-    "jquery": "^2.2.0",
-    "jquery-validation": "^1.14.0",
-    "jquery-validation-unobtrusive": "^3.2.6",
+    "jquery": ">=3.0.0",
+    "jquery-validation": "^1.18.0",
+    "jquery-validation-unobtrusive": "^3.2.11",
     "jquery.cookie": "^1.4.1",
-    "marked": "^0.3.7"
+    "marked": "^0.5.1"
   }
 }
