--- a/src/ChatApp/package.json
+++ b/src/ChatApp/package.json
@@ -34,6 +34,7 @@
     "ts-loader": "^5.3.0",
     "typescript": "^3.1.6",
     "typings": "^2.1.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2",
     "webpack-merge": "^4.1.4"
