--- a/src/ChatApp/package.json
+++ b/src/ChatApp/package.json
@@ -11,11 +11,11 @@
     "make:dev": "npm-run-all build:dev copy",
     "build": "npm-run-all build:css build:release_js",
     "build:dev": "npm-run-all build:css build:js",
-    "build:js": "cleandir wwwroot/js && grunt typings && webpack",
+    "build:js": "cleandir wwwroot/js && webpack",
     "build:css": "cleandir wwwroot/css && grunt build",
-    "build:release_js": "cleandir wwwroot/js && grunt typings && webpack --config webpack.production.js",
-    "build:typings": "grunt typings",
+    "build:release_js": "cleandir wwwroot/js && webpack --config webpack.production.js",
     "copy": "npm-run-all clean:lib copy:*",
+    "copy:angularjs": "cpx \"node_modules/angular/angular.min.js\" ./wwwroot/lib/angular/dist",
     "copy:bootstrap": "cpx \"node_modules/bootstrap/dist/**/*\" ./wwwroot/lib/bootstrap/dist",
     "copy:jquery": "cpx \"node_modules/jquery/dist/*.js\" ./wwwroot/lib/jquery/dist/",
     "copy:jquery-validation": "cpx \"node_modules/jquery-validation/dist/**/*.js\" ./wwwroot/lib/jquery-validation/dist",
@@ -30,18 +30,16 @@
     "grunt-contrib-cssmin": "^3.0.0",
     "grunt-contrib-less": "^2.0.0",
     "grunt-contrib-watch": "^1.1.0",
-    "npm-run-all": "^4.1.3",
+    "npm-run-all": "^4.1.5",
     "ts-loader": "^5.3.0",
     "typescript": "^3.1.6",
-    "typings": "^2.1.1",
-    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2",
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
     "@types/angular-ui-bootstrap": "^0.13.47",
-    "@types/angularjs": "1.5.5-alpha",
+    "@types/angular": "1.5.10",
     "@types/jquery": ">=3.0.0",
     "angular": "1.5.5",
     "angular-marked": "^1.2.2",
